--- a/index.html
+++ b/index.html
@@ -1,7 +1,15 @@
-<div id="main">
-<!-- this is a comment -->
- This is my personal website.
- <button class="subpage">press me</button>
- <p> My self-introduction is only one sentence.</p>
- <img src="me.jpg"/>
- </div>
+<html>
+    <head>
+        <link href="style.css" rel="stylesheet" />
+    </head>
+    <body>
+        <div id="main">
+            <!-- this is a comment -->
+            This is my personal website.
+            <button class="subpage">press me</button>
+            <button class="subpage">about me</button>
+            <p> My self-introduction is only one sentence.</p>
+            <img src="me.jpg"/>
+        </div>
+    </body>
+<html>
