i add some self introduction

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
             This is my personal website.
             <button class="subpage">press me</button>
             <button class="subpage">about me</button>
-            <p> My self-introduction is only one sentence.</p>
+            <p> My name is kitty,i like study.</p>
             <img src="me.jpg"/>
         </div>
     </body>
