In-Class Participation 2

--- a/index.html
+++ b/index.html
@@ -1,15 +1,35 @@
-<html>
-    <head>
-        <link href="style.css" rel="stylesheet" />
-    </head>
-    <body>
-        <div id="main">
-            <!-- this is a comment -->
-            This is my personal website.
-            <button class="subpage">press me</button>
-            <button class="subpage">about me</button>
-            <p> My name is kitty,i like study.</p>
-            <img src="me.jpg"/>
+<head>
+    <link href="style.css" rel="stylesheet" />
+
+</head>
+<body>
+    <h1>This is a title from html </h1>
+
+    <div id="main">
+        <!-- this is a comment -->
+        This is my personal website.
+        <button class="subpage">About me</button>
+        <button class="subpage">Gallery</button>
+        <button id="cv" class="subpage">CV</button>
+        <p> My name is kitty,i like study.</p>
+        <img src="me.jpg"/>
+    </div>
+
+   <!--<div class="box">
+        <div>One</div>
+        <div>Two</div>
+        <div>Three
+            <br> first line
+            <br> second line
         </div>
-    </body>
-<html>
+    </div> -->
+
+    <div class="grid-container">
+       <div id="my_work1" class="grid-item1"> My Work 1 </div>
+       <div class="grid-item2"> My Work 2 </div>
+       <div class="grid-item3"> My Work 3 </div>
+    </div>
+
+    <script src="code.js"></script>
+</body>
+
