--- a/index.html
+++ b/index.html
@@ -1,9 +1,34 @@
 <head>
     <link href="style.css" rel="stylesheet" />
+    <script src="https://d3js.org/d3.v7.min.js"></script>
 
 </head>
 <body>
     <h1>This is a title from html </h1>
+
+    <header>
+        <!-- navigation bar -->
+         <nav id="nav">
+            <u1>
+                <P>kAKI hO</P>
+                <button class="subpage">About me</button>
+                <button class="subpage">Gallery</button>
+            <button id="cv" class="subpage">CV</button>
+            </u1>
+         </nav>
+
+         <!-- photo + self-intro -->
+          <div id="main" class="flex-container">
+            <img src="me.jpg"/>
+            <div>
+                <h1>Welcome to my website!</h1>
+                <p> My self-introduction is one sentence. </p>
+                <a class="intro_bytton" href="">Follow me or instagram</a>
+          </div>
+
+
+        </div>
+    </header>
 
     <div id="main">
         <!-- this is a comment -->
@@ -30,6 +55,13 @@
        <div class="grid-item3"> My Work 3 </div>
     </div>
 
+    <section id="vis-scatterplot"></section>
+    <section id="vis-radarchart"></section>
+        This is my section
+    </section>
+
     <script src="code.js"></script>
+    <script src="src/scatterplot.js"></script>
+    <script src="src/radarplot.js"></script>
 </body>
 
