--- a/index.html
+++ b/index.html
@@ -1,37 +1,36 @@
 <head>
     <link href="style.css" rel="stylesheet" />
+    <title>kAKI hO</title>
     <script src="https://d3js.org/d3.v7.min.js"></script>
-
+    
 </head>
 <body>
-    <h1>This is a title from html </h1>
+    <!--<h1>This is a title from html </h1> -->
 
     <header>
         <!-- navigation bar -->
-         <nav id="nav">
+         <nav id="main">
             <u1>
                 <P>kAKI hO</P>
-                <button class="subpage">About me</button>
-                <button class="subpage">Gallery</button>
-            <button id="cv" class="subpage">CV</button>
+                <a class="subpage" href="#vis-radarchart">About me</a>
+                <a class="subpage" href="my_work.html">My work</a>
+                <button id="cv" class="subpage">CV</button>
             </u1>
          </nav>
 
          <!-- photo + self-intro -->
-          <div id="main" class="flex-container">
+          <div class="flex-container">
             <img src="me.jpg"/>
-            <div>
+            <div class="text-container">
                 <h1>Welcome to my website!</h1>
                 <p> My self-introduction is one sentence. </p>
                 <a class="intro_bytton" href="">Follow me or instagram</a>
           </div>
-
-
         </div>
     </header>
 
-    <div id="main">
-        <!-- this is a comment -->
+   <!--  <div id="main">
+         this is a comment 
         This is my personal website.
         <button class="subpage">About me</button>
         <button class="subpage">Gallery</button>
@@ -40,28 +39,36 @@
         <img src="me.jpg"/>
     </div>
 
-   <!--<div class="box">
+   <div class="box">
         <div>One</div>
         <div>Two</div>
         <div>Three
             <br> first line
             <br> second line
         </div>
-    </div> -->
+    </div> 
 
     <div class="grid-container">
        <div id="my_work1" class="grid-item1"> My Work 1 </div>
        <div class="grid-item2"> My Work 2 </div>
        <div class="grid-item3"> My Work 3 </div>
-    </div>
+    </div> -->
 
     <section id="vis-scatterplot"></section>
-    <section id="vis-radarchart"></section>
-        This is my section
+        <h2>This is my section</h2>
+    </section>
+
+    <section id="vis-treedate"></section>
+        <h2>This is my presonal information</h2>
+    </section>
+
+<section id="vis-workboxs"></section>
+        <h2>This is my work</h2>
     </section>
 
     <script src="code.js"></script>
     <script src="src/scatterplot.js"></script>
-    <script src="src/radarplot.js"></script>
+    <script src="src/treedate.js"></script>
+    <script src="src/workboxs.js"></script>
 </body>
 
