convert the node link diagram adjacency matrix

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="text-container">
                 <h1>Welcome to my website!</h1>
                 <p> My self-introduction is one sentence. </p>
-                <a class="intro_bytton" href="">Follow me or instagram</a>
+                <a class="intro_bytton" href="https://www.instagram.com/kitty.hokaki?igsh=MW1zMWZrNG45bnR6cg==">Follow me or instagram</a>
           </div>
         </div>
     </header>
@@ -62,13 +62,20 @@
         <h2>This is my presonal information</h2>
     </section>
 
-<section id="vis-workboxs"></section>
-        <h2>This is my work</h2>
+<section id="vis-nodelink"></section>
+        <h2>This is my skills</h2>
     </section>
 
-    <script src="code.js"></script>
+    <section id="vis-adjacencymatrix"></section>
+        <h2>Node-Link Diagram Adjacency Matrix</h2>
+    </section>
+    
+
+    <!-- <script src="code.js"></script> -->
     <script src="src/scatterplot.js"></script>
     <script src="src/treedate.js"></script>
-    <script src="src/workboxs.js"></script>
+    <!-- <script src="src/workboxs.js"></script> -->
+    <script src="src/nodelink.js"></script>
+    <script src="src/adjacencymatrix.js"></script>
 </body>
 
