--- a/index.html
+++ b/index.html
@@ -70,6 +70,13 @@
         <h2>Node-Link Diagram Adjacency Matrix</h2>
     </section>
     
+    <section id="vis-dotdensitymap"></section>
+        <h2>Dot Density Map</h2>
+    </section>
+
+     <section id="vis-gridcartogram"></section>
+        <h2>Grid Cartogram</h2>
+    </section>
 
     <!-- <script src="code.js"></script> -->
     <script src="src/scatterplot.js"></script>
@@ -77,5 +84,7 @@
     <!-- <script src="src/workboxs.js"></script> -->
     <script src="src/nodelink.js"></script>
     <script src="src/adjacencymatrix.js"></script>
+    <script src="src/dotdensitymap.js"></script>
+    <script src="src/gridcartogram.js"></script>
 </body>
 
