--- a/index.html
+++ b/index.html
@@ -54,6 +54,16 @@
        <div class="grid-item3"> My Work 3 </div>
     </div> -->
 
+   <section id="scatterplot">
+    <h2>My Work Video</h2>
+    <div class="video-container">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/SxjZ_ctNQPc"
+                frameborder="0" allowfullscreen></iframe>
+    </div>
+    <p>Here's a video showcasing some of my work. I hope you enjoy it!</p>
+</section>
+
+
     <section id="vis-scatterplot"></section>
         <h2>This is my section</h2>
     </section>
