--- a/my_work.html
+++ b/my_work.html
@@ -5,10 +5,68 @@
 
 </head>
 <body>
-    <section id="vis-scatterplot"></section>
+    <a class="subpage" href="index.html">H.KITTY</a>
+ 
          <h2>This is a scatterplot about my prior work</h2>
     </section>
+</body>
 
-    <script src="src/scatterplot.js"></script>
+
+    
+</head>
+<body>
+    <header>
+        <!-- navigation bar -->
+        <nav id="main">
+            <div class="navbar-container">
+                <div class="navbar-left">
+                    <a class="subpage" href="index.html">H.KITTY</a>
+                </div>
+                <div class="navbar-right">
+                    <a class="subpage" href="#vis-radarchart">About me</a>
+                    <a class="subpage" href="my_work.html">My work</a>
+                    <a class="subpage" href="cv.html">CV</a>
+                    <a href="https://www.instagram.com/kitty.hokaki?igsh=MW1zMWZrNG45bnR6cg==" target="_blank" class="instagram-link">
+                        <img src="instagram_icon.png" alt="Instagram" style="width: 20px; height: 20px;">
+                    </a>
+                </div>
+            </div>
+        </nav>
+
+
+    <section id="work-videos">
+        <h2>My Work Videos</h2>
+        <div class="video-grid">
+            <div class="video-item">
+                <iframe src="https://www.youtube.com/watch?v=EPqsC68DQfw" frameborder="0" allowfullscreen></iframe>
+            </div>
+            <div class="video-item">
+                <iframe src="https://www.youtube.com/watch?v=WhxcT7euQzQ" frameborder="0" allowfullscreen></iframe>
+            </div>
+            <div class="video-item">
+                <iframe src="https://www.youtube.com/watch?v=fFWc1-qhoSY" frameborder="0" allowfullscreen></iframe>
+            </div>
+            <div class="video-item">
+                <iframe src="https://www.youtube.com/shorts/a-8AvZ_GTaM" frameborder="0" allowfullscreen></iframe>
+            </div>
+            <div class="video-item">
+                <iframe src="https://www.youtube.com/shorts/fq2K3cnlBS8" frameborder="0" allowfullscreen></iframe>
+            </div>
+            <div class="video-item">
+                <iframe src="https://www.youtube.com/embed/SxjZ_ctNQPc" frameborder="0" allowfullscreen></iframe>
+            </div>
+            <div class="video-item">
+                <iframe src="https://www.youtube.com/embed/SxjZ_ctNQPc" frameborder="0" allowfullscreen></iframe>
+            </div>
+            <div class="video-item">
+                <iframe src="https://www.youtube.com/embed/SxjZ_ctNQPc" frameborder="0" allowfullscreen></iframe>
+            </div>
+            <div class="video-item">
+                <iframe src="https://www.youtube.com/embed/SxjZ_ctNQPc" frameborder="0" allowfullscreen></iframe>
+            </div>
+        </div>
+        
+    </section>
+
 </body>
 
