--- a/pj.html
+++ b/pj.html
@@ -34,26 +34,26 @@
         </nav>
 
 
-    <section id="work-videos">
+     <section id="work-videos">
         <h2>Director work</h2>
         <div class="video-grid">
             <div class="video-item">
-                <iframe src="https://youtu.be/EPqsC68DQfw" frameborder="0" allowfullscreen></iframe>
+                <iframe src="https://www.youtube.com/watch?v=fFWc1-qhoSY" frameborder="0" allowfullscreen></iframe>
             </div>
             <div class="video-item">
-                <iframe src="https://youtu.be/fFWc1-qhoSY" frameborder="0" allowfullscreen></iframe>
+                <iframe src="https://youtu.be/EPqsC68DQfw?si=FKvdPmWoW59CUfW0" frameborder="0" allowfullscreen></iframe>
             </div>
             <div class="video-item">
-                <iframe src="https://youtu.be/WhxcT7euQzQ" frameborder="0" allowfullscreen></iframe>
+                <iframe src="https://www.youtube.com/watch?v=WhxcT7euQzQ" frameborder="0" allowfullscreen></iframe>
             </div>
             <div class="video-item">
-                <iframe src="https://youtube.com/shorts/a-8AvZ_GTaM?feature=share" frameborder="0" allowfullscreen></iframe>
+                <iframe src="https://www.youtube.com/shorts/fq2K3cnlBS8" frameborder="0" allowfullscreen></iframe>
             </div>
             <div class="video-item">
-                <iframe src="https://youtube.com/shorts/fq2K3cnlBS8?feature=share" frameborder="0" allowfullscreen></iframe>
+                <iframe src="https://www.youtube.com/shorts/SQXzkdwyhXE" frameborder="0" allowfullscreen></iframe>
             </div>
             <div class="video-item">
-                <iframe src="https://youtube.com/shorts/SQXzkdwyhXE?feature=share" frameborder="0" allowfullscreen></iframe>
+                <iframe src="https://www.youtube.com/shorts/a-8AvZ_GTaM" frameborder="0" allowfullscreen></iframe>
             </div>
             
         </div>
