--- a/index.html
+++ b/index.html
@@ -64,32 +64,29 @@ Thank you for exploring my world.
 
 
 
-    <section id="work-videos">
-        <h2>Director work</h2>
-        <div class="video-grid">
-            <div class="video-item">
-                <iframe src="https://www.youtube.com/watch?v=fFWc1-qhoSY" frameborder="0" allowfullscreen></iframe>
-            </div>
-            <div class="video-item">
-                <iframe src="https://youtu.be/EPqsC68DQfw?si=FKvdPmWoW59CUfW0" frameborder="0" allowfullscreen></iframe>
-            </div>
-            <div class="video-item">
-                <iframe src="https://www.youtube.com/watch?v=WhxcT7euQzQ" frameborder="0" allowfullscreen></iframe>
-            </div>
-            <div class="video-item">
-                <iframe src="https://www.youtube.com/shorts/fq2K3cnlBS8" frameborder="0" allowfullscreen></iframe>
-            </div>
-            <div class="video-item">
-                <iframe src="https://www.youtube.com/shorts/SQXzkdwyhXE" frameborder="0" allowfullscreen></iframe>
-            </div>
-            <div class="video-item">
-                <iframe src="https://www.youtube.com/shorts/a-8AvZ_GTaM" frameborder="0" allowfullscreen></iframe>
-            </div>
-            
+<section id="work-videos">
+    <h2>Director Work</h2>
+    <div class="video-grid">
+        <div class="video-item">
+             <iframe width="560" height="315" src="https://www.youtube.com/embed/EPqsC68DQfw?si=hTShY1YVXE8Xdecp" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
-
-   
-  </section>
+        <div class="video-item">
+            <iframe src="https://www.youtube.com/embed/EPqsC68DQfw?si=hTShY1YVXE8Xdecp" frameborder="0" allowfullscreen></iframe>
+        </div>
+        <div class="video-item">
+            <iframe src="https://www.youtube.com/embed/WhxcT7euQzQ" frameborder="0" allowfullscreen></iframe>
+        </div>
+        <div class="video-item">
+            <iframe src="https://www.youtube.com/embed/fq2K3cnlBS8" frameborder="0" allowfullscreen></iframe>
+        </div>
+        <div class="video-item">
+            <iframe src="https://www.youtube.com/embed/SQXzkdwyhXE" frameborder="0" allowfullscreen></iframe>
+        </div>
+        <div class="video-item">
+            <iframe src="https://www.youtube.com/embed/a-8AvZ_GTaM" frameborder="0" allowfullscreen></iframe>
+        </div>
+    </div>
+</section>
 
         <section id="ohoto-gallery-section">
             <h2>Photo Gallery</h2>
