--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@ Thank you for exploring my world.
              <iframe width="560" height="315" src="https://www.youtube.com/embed/EPqsC68DQfw?si=hTShY1YVXE8Xdecp" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
         <div class="video-item">
-            <iframe src="https://www.youtube.com/embed/EPqsC68DQfw?si=hTShY1YVXE8Xdecp" frameborder="0" allowfullscreen></iframe>
+           <iframe width="560" height="315" src="https://www.youtube.com/embed/fFWc1-qhoSY?si=YkruRwI5daSBC7h7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
         <div class="video-item">
-            <iframe src="https://www.youtube.com/embed/WhxcT7euQzQ" frameborder="0" allowfullscreen></iframe>
+           <iframe width="560" height="315" src="https://www.youtube.com/embed/WhxcT7euQzQ?si=Rn_4XhEo4XTJfTNt" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
         <div class="video-item">
             <iframe src="https://www.youtube.com/embed/fq2K3cnlBS8" frameborder="0" allowfullscreen></iframe>
