--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ Thank you for exploring my world.
     </div>
 </section>
 
-        <section id="ohoto-gallery-section">
+        <section id="pohoto-gallery-section">
             <h2>Photo Gallery</h2>
      <div class="gallery">
         <div class="photo-item" data-theme="theme1">
