--- a/pj.html
+++ b/pj.html
@@ -93,7 +93,7 @@
    
   </section>
 
-        <section id="ohoto-gallery-section">
+        <section id="pohoto-gallery-section">
             <h2>Photo Gallery</h2>
      <div class="gallery">
         <div class="photo-item" data-theme="theme1">
